Make use of toList()